chore:added basic functions on app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">TodoApp</string>
+    <string name="save">Save</string>
+    <string name="new_task">New Task</string>
 </resources>
